--- a/english.html
+++ b/english.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Home</title>
         <link rel="stylesheet" href="index.css" />
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </head>
     <body>
         <div id="topScheduleBar">다가오는 일정</div>
@@ -16,8 +17,12 @@
             <a href="technology.html" class="navButton">기가</a>
             <a href="chinese.html" class="navButton">한문</a>
         </div>
-        <div style="margin: 25px;padding-top:250px; color: black; font-family: 'Jua', sans-serif;text-align: center;height: 250px;">
-            여러분의 소중한 자료를 기다리고 있어요  😍
+        <div id="contents" style="margin: 25px;padding-top:250px; color: black; font-family: 'Jua', sans-serif;text-align: center;height: 250px;">
+            <!--여러분의 소중한 자료를 기다리고 있어요  😍-->
         </div>
+
+
+        <script type="text/javascript" src="./common.js"></script>
+
     </body>
 </html>
