--- a/index.html
+++ b/index.html
@@ -28,26 +28,45 @@
         </div>
         <div id="mainContents"></div>
         <script>
+            let d = 0
             $(".m_navButton div").click(function(e) {
                     $(".m_navButton div").removeClass("selected").addClass("navButton");
                     $(this).addClass("selected").removeClass("navButton");
                     let menu = $(this).attr('id');
-                    if(menu === "english_R"||menu === "math"){
-                        getContents(menu);
+                    if(menu === "english_R"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 영어-Red 게시판의 첫 등록자가 되어 보세요.`);
+                    }else if(menu === "math"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 수학 게시판의 첫 등록자가 되어 보세요.`);
                     }else if(menu === "event"){
                         write();
+                    }else if(menu === "korean"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 국어 게시판의 첫 등록자가 되어 보세요.`);
+                    }else if(menu === "science"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 과학 게시판의 첫 등록자가 되어 보세요.`);
+                    }else if(menu === "english_B"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 영어-Blue 게시판의 첫 등록자가 되어 보세요.`);
+                    }else if(menu === "moral"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 도덕 게시판의 첫 등록자가 되어 보세요.`);
+                    }else if(menu === "tech_and_house"){
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 기술·가정 게시판의 첫 등록자가 되어 보세요.`);
                     }else{
-                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃`);
+                        $("#mainContents").html(`여러분들의 유용한 자료를 기다리고 있어요 😃<br> 한문 게시판의 첫 등록자가 되어 보세요.`);
                     }
+                    $("#mainContents").append(`<br><a href="https://band.us/band/86825113/">자료 등록 하러가기</a>`);
+                    $("#mainContents").append(`<br><button id='howTo' onclick="howTo()">자료 등록하는 방법</button>`);
                     e.preventDefault();     
                 }            
             );
-                
+
+            function howTo() {
+                    $("#howTo").html(`개발자에게 밴드 톡으로 자료를 보내면 검토를 통해 검증된 자료가 업로드돼요.`);
+                    d++;
+                e.preventDefault();
+            };
             function getContents(menu){
                 $("#mainContents").html("");
                 $.getJSON(`./${menu}.json`, function(data){
                     for(key in data){
-                        console.log("key")
                         const div = document.createElement("div");
                         div.setAttribute("id", key);
                         div.classList.add("contDiv")
@@ -60,11 +79,9 @@
                         text.append("작성자 : "+data[key].작성자);
                         text.append(" / 유형 : "+data[key].유형);
                         text.append(" / 등록일자 : "+data[key].등록일자);
-                        console.log(key)
                         document.getElementById("mainContents").appendChild(div);
                         document.getElementById(key).appendChild(img);
                         document.getElementById(key).appendChild(text);
-                        console.log(key)
                     }                    
                         })
             }
