--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8" />
         <title>Home</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <link rel="stylesheet" href="index.css" />        
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+        <link rel="stylesheet" href="index.css" />        
     </head>
     <body>
         <div id="topScheduleBar"></div>
@@ -27,6 +28,24 @@
             </div>
         </div>
         <div id="mainContents"></div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header bg-dark">
+                <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
+                </div>
+                <a id="download_img" download>
+                    <div class="modal-dialog modal-dialog-centered">
+                    <img width="100%" id="modal_img" alt="dd">
+                    </div>
+                </a>
+                <div class="modal-footer bg-dark">
+                <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </body>
 </html>
