--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     </head>
     <body>
         <div id="topScheduleBar"></div>
+        <div class="offcanvas show offcanvas-bottom" tabindex="-1" id="offcanvas" aria-labelledby="offcanvasLabel">
+            <div class="offcanvas-body" style="text-align: center;">
+                <h5>자료 등록 안내</h5><br>월/금 오후 5:30 ~ 6:00<br>토/일 유동적
+            </div>
+        </div>
         <div id="topNavBar">
             <div class="m_navButton">
                 <div id="korean"class="navButton">국어</div>
@@ -30,22 +35,36 @@
         <div id="mainContents"></div>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header bg-dark">
-                <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
-                </div>
-                <a id="download_img" download>
-                    <div class="modal-dialog modal-dialog-centered">
-                    <img width="100%" id="modal_img" alt="dd">
+                <div class="modal-content">
+                    <div class="modal-header bg-dark">
+                        <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
                     </div>
-                </a>
-                <div class="modal-footer bg-dark">
-                <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
+                    <a id="download_img" download>
+                        <div class="modal-dialog modal-dialog-centered">
+                            <img width="100%" id="modal_img" alt="dd">
+                        </div>
+                    </a>
+                    <div class="modal-footer bg-dark">
+                        <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
+                    </div>
                 </div>
+            </div>
+        </div>
+        <div class="infoDiv">
+            <br><br>주소 : 미양중 2층 2-1<br>대표자명 : 손원희<br>대표메일 : maruson08@naver.com
+            <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom" aria-controls="offcanvasBottom">About</button>
+            <div class="offcanvas offcanvas-bottom  text-black" tabindex="-1" id="offcanvasBottom" aria-labelledby="offcanvasBottomLabel">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title" id="offcanvasBottomLabel">About</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+            </div>
+            <div class="offcanvas-body small">
+                반 평균을 올리기 위한 프로젝트<br>개발자 : 손원희
             </div>
             </div>
         </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
         <script src="index.js"></script>
     </body>
 </html>
