make modal scrollable delete conImg padding

--- a/index.html
+++ b/index.html
@@ -34,20 +34,21 @@
         </div>
         <div id="mainContents"></div>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-lg modal-dialog-scrollable modal-dialog-centered" >
-                <div class="modal-content">
-                    <div class="modal-header bg-dark">
-                        <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
-                    </div>
-                    <a id="download_img" download>
-                        <div class="modal-dialog modal-dialog-centered">
-                            <img width="100%" id="modal_img" alt="dd">
-                        </div>
-                    </a>
-                    <div class="modal-footer bg-dark">
-                        <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
-                    </div>
+            <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
+            <div class="modal-content">
+                <div class="modal-header bg-dark">
+                <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+                <div class="modal-body">
+                    <a id="download_img" download>
+                        <img width="100%" id="modal_img" alt="dd">
+                    </a>
+                </div>
+                <div class="modal-footer bg-dark">
+                <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
             </div>
         </div>
         <div id="infoDiv">
