fixed path error

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <div id="event"class="navButton">일정</div>
             </div>
         </div>
+        <div style="color: red; text-align:center;"><b>*전년도 시험지에 대한 모든 저작권은 미양중에 있음*</b></div>
         <div id="mainContents"></div>
         <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
