--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title>Home</title>
+        <title>미양중 2-1 일정알림 & 수업자료</title>
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -36,15 +36,14 @@
         </div>
         <div style="color: red; text-align:center;"><b>*시험지에 대한 모든 저작권은 미양중에 있음*</b></div>
         <div id="mainContents"></div>
-        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="contentsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header bg-dark">
-                <h5 class="modal-title text-white" id="exampleModalLabel"></h5>
+                <h5 class="modal-title text-white" id="contentsModalLabel"></h5>
                 </div>
-                <div class="modal-body p-0">
+                <div id="contenstModalMain" class="modal-body p-0">
                     <a id="download_img" download>
-                        
                     </a>
                 </div>
                 <div class="modal-footer bg-dark">
