--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
                 <div class="modal-header bg-dark">
                 <h5 class="modal-title text-white" id="contentsModalLabel"></h5>
                 </div>
-                <div id="contenstModalMain" class="modal-body p-0">
-                    <a id="download_img" download>
-                    </a>
+                <div id="contentsModalMain" class="modal-body p-0">
                 </div>
                 <div class="modal-footer bg-dark">
                 <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
