--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <h5 class="modal-title text-white" id="contentsModalLabel"></h5>
                 </div>
                 <div id="contentsModalMain" class="modal-body p-0">
+                    <a id="download_img" download>
+                    </a>
                 </div>
                 <div class="modal-footer bg-dark">
                 <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
