--- a/developing/developing.html
+++ b/developing/developing.html
@@ -6,12 +6,15 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="developing.css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head>
     <body>
-        <div id="topScheduleBar"></div>
+        <div id="top">
+            <div id="title">미양중 2-1 일정알림 & 수업자료</div>
+            <div id="topScheduleBar"></div>
+        </div>
         <div id="topNavBar">
             <div class="m_navButton">
                 <div id="korean"class="navButton">국어</div>
@@ -57,11 +60,33 @@
             </div>
             </div>
         </div>
+        
+
+
+    <div class="row row-cols-1 row-cols-md-2">
+        <div class="col">
+            <div class="card">
+            <img src="" class="card-img-top">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            </div>
+        </div>
+        <div class="col">
+            <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            </div>
+        </div>
 
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-        <script src="index.js"></script>
+        <script src="developing.js"></script>
     </body>
 </html>
