--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-        <link rel="stylesheet" href="index.css" />
+        <link rel="stylesheet" href="halloween.css" />
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head>
@@ -30,12 +30,19 @@
             </div>
         </div>
         <div style="color: red; text-align:center;"><b>*시험지에 대한 모든 저작권은 미양중에 있음*</b></div>
-        <div id="mainContents"></div>
+        <div id="mainContents" style="position:relative;">
+            <div id="halloween">
+                <img class="halloween" width="10%" style="top: 0;left: 50%;" src="/img/skeleton.gif">
+                <img class="halloween" width="10%" style="top: 10%;left: 20%;" src="/img/pumpkin.gif">
+                <img class="halloween" width="10%" style="top: 10%;left: 80%;" src="/img/spider-insect.png">
+                <img class="halloween" width="10%" style="top: 30%;left: 80%;" src="/img/lollipop.gif">
+            </div>
+        </div>
         <div class="modal fade" id="contentsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header bg-dark">
-                <h5 class="modal-title text-white" id="contentsModalLabel"></h5>
+                <h5 class="modal-title" id="contentsModalLabel"></h5>
                 </div>
                 <div id="contentsModalMain" class="modal-body p-0">
                     <a id="download_img" download>
@@ -63,5 +70,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script src="halloween.js"></script>
     </body>
 </html>
