--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
         <div style="color: red; text-align:center;"><b>*시험지에 대한 모든 저작권은 미양중에 있음*</b></div>
         <div id="mainContents" style="position:relative;">
             <div id="halloween">
-                <img class="halloween" width="10%" style="top: 0;left: 50%;" src="/img/skeleton.gif">
-                <img class="halloween" width="10%" style="top: 10%;left: 20%;" src="/img/pumpkin.gif">
-                <img class="halloween" width="10%" style="top: 10%;left: 80%;" src="/img/spider-insect.png">
-                <img class="halloween" width="10%" style="top: 30%;left: 80%;" src="/img/lollipop.gif">
+                <img class="halloween" width="10%" style="top: 0;left: 50%;" src="./img/skeleton.gif">
+                <img class="halloween" width="10%" style="top: 10%;left: 20%;" src="./img/pumpkin.gif">
+                <img class="halloween" width="10%" style="top: 10%;left: 80%;" src="./img/spider-insect.png">
+                <img class="halloween" width="10%" style="top: 30%;left: 80%;" src="./img/lollipop.gif">
             </div>
         </div>
         <div class="modal fade" id="contentsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
