--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     </head>
     <body style="position:relative;">
-        <div id="bail"></div>
+        <div id="bail"> 이태원 사고 사망자를 애도합니다 </div>
         <img src="./img/black_ribbon.png" id="ribbon">
         <div id="topScheduleBar"></div>
         <div id="topNavBar">
