modalTitle color change

--- a/index.html
+++ b/index.html
@@ -32,24 +32,20 @@
             </div>
         </div>
         <div style="color: red; text-align:center;"><b>*시험지에 대한 모든 저작권은 미양중에 있음*</b></div>
-        <div id="mainContents" style="position:relative;">
-            <!-- <img class="halloween" width="10%" style="top: 0;left: 50%;" src="./img/skeleton.gif">
-            <img class="halloween" width="10%" style="top: 10%;left: 20%;" src="./img/pumpkin.gif">
-            <img class="halloween" width="10%" style="top: 10%;left: 80%;" src="./img/spider-insect.png">
-            <img class="halloween" width="10%" style="top: 30%;left: 80%;" src="./img/lollipop.gif"> -->
+        <div id="mainContents">
         </div>
         <div class="modal fade" id="contentsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
             <div class="modal-content">
                 <div class="modal-header bg-dark">
-                <h5 class="modal-title" id="contentsModalLabel" style="color: orange;"></h5>
+                <h5 class="modal-title" id="contentsModalLabel"></h5>
                 </div>
                 <div id="contentsModalMain" class="modal-body p-0">
                     <a id="download_img" download>
                     </a>
                 </div>
                 <div class="modal-footer bg-dark">
-                <button type="button" class="btn btn-outline-light" style="color: orange;border-color:orange;" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-outline-light" data-bs-dismiss="modal">Close</button>
                 </div>
             </div>
             </div>
